INCLUDES = -I${top_srcdir}/src/uip		\
	   -I${top_srcdir}/src/unix		\
	   -I${top_srcdir}/src/unix/libs	\
           -I${top_srcdir}/src/apps/dhcpc	\
           -I${top_srcdir}/include

noinst_LIBRARIES = libbrcm_iscsiuio_hw_cnic.a

libbrcm_iscsiuio_hw_cnic_a_SOURCES =	../build_date.c \
					cnic.c 		\
					bnx2.c		\
					bnx2x.c
